# BookStore

./: .env.dev  Dockerfile  docker-compose.yaml  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
app/bookStore/: asgi.py  settings.py  urls.py  views.py  wsgi.py
app/order/: urls.py
app/order/migrations/: 0001_initial.py
app/order/models/: order.py
app/order/tests/: test_order_serializer.py  test_order_viewset.py
app/order/viewsets/: order_viewset.py
app/product/: factories.py  urls.py
app/product/migrations/: 0001_initial.py
app/product/models/: product.py
app/product/serializer/: category_serializer.py  product_serializer.py
app/product/tests/: test_category_viewset.py  test_product_viewset.py
app/product/viewsets/: category_viewset.py  product_viewset.py
app/static/admin/css/: base.css  forms.css  login.css
app/static/debug_toolbar/css/: toolbar.css
bookStore/: settings.py  urls.py
nginx/: nginx.conf
order/: admin.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializer/: order_serializer.py
order/tests/: test_order_serializer.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0002_remove_product_categories_product_category.py
product/models/: category.py  product.py
product/serializer/: category_serializer.py  product_serializer.py
product/tests/: test_category_viewset.py  test_product_serializer.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
