[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Jaime Junr <jaimeodairbassojuniorjaime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "<5.0"
djangorestframework = "^3.14"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
psycopg2-binary = "^2.9.9"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
factory-boy = "^3.3.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
